updated transfer data (much leaner)
