# api/openapi.yaml
@@ -61,7 +61,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ResourceUtilization'
+                description: |
+                  The resource utilization from the last 60 seconds. The first
+                  element represents the resources in use 60 seconds ago, the 
+                  second is for 59 seconds ago, and so on up to the last
+                  element which represents the current resource utilization.
+                type: array
+                items:
+                  $ref: '#/components/schemas/ResourceUtilization'
         500:
           description: |
             There's some problem with the service. Check the response message.
@@ -1145,137 +1152,170 @@ components:
     
     ResourceUtilization:
       type: object
-      example:
-        cpu:
-          description: "AMD Ryzen 7 5800X 8-Core Processor"
-          overallPercent: 42.7
-          mhz: 3800.0
-          cores:
-            - percent: 35.2
-            - percent: 41.8
-            - percent: 47.1
-            - percent: 39.6
-        memory:
-          inUseOmr: 524288000
-          inUseOther: 8589934592
-          totalAvailable: 34359738368
-        disk:
-          database: 104857600
-          numberOfMatrices: 1200
-          matrices: 5368709120
-          numberofPictures: 45000
-          pictures: 21474836480
-          total: 1073741824000
-          used: 322122547200
-      properties:
-        cpu:
-          type: object
-          properties:
-            description:
-              type: string
-              description: Human-readable CPU description.
-              example: "AMD Ryzen 7 5800X 8-Core Processor"
-            overallPercent:
-              type: number
-              format: double
-              description: Overall CPU utilization percentage.
-              example: 42.7
-            mhz:
-              type: number
-              format: double
-              description: Current CPU frequency in MHz.
-              example: 3800.0
-            thread:
-              type: array
-              description: |
-                Per-core CPU utilization. On systems with hyperthreading, there
-                will be two entries per core.
-              items:
-                type: object
-                properties:
-                  percent:
-                    type: number
-                    format: double
-                    description: CPU utilization percentage for this core.
-                    example: 35.2
-                required:
-                  - percent
-          required:
-            - description
-            - overallPercent
-            - mhz
-            - threads
-
-        memory:
-          type: object
-          properties:
-            inUseOmr:
-              type: integer
-              format: uint64
-              description: Resident memory used by the OMR process, in bytes.
-              example: 524288000
-            inUseOther:
-              type: integer
-              format: uint64
-              description: Other resident memory used by the system/process environment, in bytes.
-              example: 8589934592
-            totalAvailable:
-              type: integer
-              format: uint64
-              description: Total available system memory, in bytes.
-              example: 34359738368
-          required:
-            - inUseOmr
-            - inUseOther
-            - totalAvailable
-
-        disk:
-          type: object
-          properties:
-            database:
-              type: integer
-              format: uint64
-              description: Database storage used, in bytes.
-              example: 104857600
-            numberOfMatrices:
-              type: integer
-              format: int32
-              description: Number of matrices stored.
-              example: 1200
-            matrices:
-              type: integer
-              format: uint64
-              description: Total storage used by matrices, in bytes.
-              example: 5368709120
-            numberofPictures:
-              type: integer
-              format: int32
-              description: Number of pictures stored.
-              example: 45000
-            pictures:
-              type: integer
-              format: uint64
-              description: Total storage used by pictures, in bytes.
-              example: 21474836480
-            total:
-              type: integer
-              format: uint64
-              description: Total capacity of the filesystem, in bytes.
-              example: 1073741824000
-            used:
-              type: integer
-              format: uint64
-              description: Total disk space currently occupied on the filesystem, in bytes.
-              example: 322122547200
-          required:
-            - database
-            - numberOfMatrices
-            - matrices
-            - numberofPictures
-            - pictures
-            - total
-            - used
       required:
-        - cpu
-        - memory
+        - cpuHistory
+        - memoryHistory
         - disk
+      properties:
+        cpuHistory:
+          type: array
+          description: Historical CPU utilization samples.
+          items:
+            $ref: '#/components/schemas/CpuInfo'
+
+        memoryHistory:
+          type: array
+          description: Historical memory utilization samples.
+          items:
+            $ref: '#/components/schemas/MemInfo'
+
+        disk:
+          $ref: '#/components/schemas/DiskUtilization'
+
+    CpuInfo:
+      type: object
+      required:
+        - description
+        - overallPercent
+        - mhz
+        - threads
+      properties:
+        description:
+          type: string
+          description: Human-readable CPU model description.
+          example: Intel(R) Core(TM) i7-12700K
+
+        overallPercent:
+          type: number
+          format: double
+          description: Overall CPU utilization percentage.
+          example: 37.4
+
+        mhz:
+          type: number
+          format: double
+          description: Current operating frequency in MHz.
+          example: 3600.0
+
+        threads:
+          type: array
+          description: Per-thread CPU utilization.
+          items:
+            $ref: '#/components/schemas/CpuThreadInfo'
+
+    CpuThreadInfo:
+      type: object
+      required:
+        - percent
+      properties:
+        percent:
+          type: number
+          format: double
+          description: CPU utilization percentage for the thread.
+          example: 42.1
+
+    MemInfo:
+      type: object
+      required:
+        - inUseOmr
+        - inUseOther
+        - totalAvailable
+      properties:
+        inUseOmr:
+          type: integer
+          format: uint64
+          description: Bytes of memory currently used by the OMR service.
+          example: 536870912
+
+        inUseOther:
+          type: integer
+          format: uint64
+          description: Bytes of memory used by all other processes.
+          example: 7432491008
+
+        totalAvailable:
+          type: integer
+          format: uint64
+          description: Total available system memory in bytes.
+          example: 17179869184
+
+    DiskUtilization:
+      type: object
+      required:
+        - usage
+        - omrUsage
+      properties:
+        usage:
+          $ref: '#/components/schemas/DiskInfo'
+
+        omrUsage:
+          $ref: '#/components/schemas/OmrDiskUsage'
+
+    DiskInfo:
+      type: object
+      required:
+        - total
+        - free
+        - used
+      properties:
+        total:
+          type: integer
+          format: uint64
+          description: Total disk capacity in bytes.
+          example: 1000204886016
+
+        free:
+          type: integer
+          format: uint64
+          description: Available disk space in bytes.
+          example: 642345984000
+
+        used:
+          type: integer
+          format: uint64
+          description: Used disk space in bytes.
+          example: 357858902016
+
+    OmrDiskUsage:
+      type: object
+      required:
+        - database
+        - numberOfMatrices
+        - matrices
+        - numberOfPictures
+        - pictures
+        - total
+      properties:
+        database:
+          type: integer
+          format: uint64
+          description: Size of the OMR database in bytes.
+          example: 104857600
+
+        numberOfMatrices:
+          type: integer
+          description: Number of stored matrices.
+          example: 245
+
+        matrices:
+          type: integer
+          format: uint64
+          description: Total storage used by matrices in bytes.
+          example: 52428800
+
+        numberOfPictures:
+          type: integer
+          description: Number of stored pictures.
+          example: 1284
+
+        pictures:
+          type: integer
+          format: uint64
+          description: Total storage used by pictures in bytes.
+          example: 734003200
+
+        total:
+          type: integer
+          format: uint64
+          description: Total disk usage of all OMR data in bytes.
+          example: 891289600
